src/test/deca/context/invalid/renduFinal/14protected_field_not_in_subtype_class.deca
// Description:
//      Utilisation d'un champ protégé : incompatibilité au niveau du typage
//      => Le type de la classe courante doit être un sous-type de la classe où le champ protégé est déclaré
//
// Resultats:
//      Erreur contextuelle
//      Ligne 15 : le type X n’est pas un sous-type de B

class A {
    protected int x;
}

class X {
    void m(){
        A a = new A();
        println(a.x);
    }
}